--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -32,7 +32,7 @@ jobs:
         xcodebuild clean build \
         -project ComfortableMove/ComfortableMove.xcodeproj \
         -scheme ComfortableMove \
-        -destination 'platform=iOS Simulator,name=iPhone 16,OS=18.0' \
+        -destination 'platform=iOS Simulator,name=Any iOS Simulator Device'
         CODE_SIGN_IDENTITY="" \
         CODE_SIGNING_REQUIRED=NO \
         CODE_SIGNING_ALLOWED=NO
@@ -42,7 +42,7 @@ jobs:
         xcodebuild test \
         -project ComfortableMove/ComfortableMove.xcodeproj \
         -scheme ComfortableMove \
-        -destination 'platform=iOS Simulator,name=iPhone 16,OS=18.0' \
+        -destination 'platform=iOS Simulator,name=Any iOS Simulator Device'
         CODE_SIGN_IDENTITY="" \
         CODE_SIGNING_REQUIRED=NO \
         CODE_SIGNING_ALLOWED=NO
