--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,17 +12,17 @@ on:
 jobs:
   build-and-test:
     name: Build and Test
-    runs-on: macos-latest
+    runs-on: macos-15  # 최신 macOS (Sequoia)
     
     steps:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Select Xcode
-      run: sudo xcode-select -switch /Applications/Xcode_16.0.app
-
     - name: Show Xcode version
       run: xcodebuild -version
+
+    - name: List available simulators
+      run: xcrun simctl list devices available
 
     - name: Show available destinations
       run: xcodebuild -scheme ComfortableMove -project ComfortableMove/ComfortableMove.xcodeproj -showdestinations
@@ -32,7 +32,7 @@ jobs:
         xcodebuild clean build \
         -project ComfortableMove/ComfortableMove.xcodeproj \
         -scheme ComfortableMove \
-        -destination 'platform=iOS Simulator,name=iPhone 15'
+        -destination 'platform=iOS Simulator,name=iPhone 16' \
         CODE_SIGN_IDENTITY="" \
         CODE_SIGNING_REQUIRED=NO \
         CODE_SIGNING_ALLOWED=NO
@@ -42,7 +42,7 @@ jobs:
         xcodebuild test \
         -project ComfortableMove/ComfortableMove.xcodeproj \
         -scheme ComfortableMove \
-        -destination 'platform=iOS Simulator,name=iPhone 15'
+        -destination 'platform=iOS Simulator,name=iPhone 16' \
         CODE_SIGN_IDENTITY="" \
         CODE_SIGNING_REQUIRED=NO \
         CODE_SIGNING_ALLOWED=NO
