--- a/ComfortableMove/ComfortableMove/Info.plist
+++ b/ComfortableMove/ComfortableMove/Info.plist
@@ -6,6 +6,10 @@
 	<string>$(API_KEY)</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>가까운 버스 정류장을 찾기 위해 위치 정보가 필요합니다.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>근처 블루투스 기기와 연결하기 위해 블루투스 권한이 필요합니다.</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>근처 블루투스 기기와 연결하기 위해 블루투스 권한이 필요합니다.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
